2007-01-16 Harri Pitkänen <hatapitk@iki.fi>

	* Support explicitly specified string lengths as opposed to only
	  allowing null terminated strings in certain utility functions.
	* VOIKKO_OPT_IGNORE_DOT is now respected during hyphenation as well,
	  and corresponding option is supported by voikkohyphenate. This
	  was needed because apparently at least OpenOffice.org feeds the
	  trailing dot to the hyphenator extension and expects it to deal
	  with it correctly.

2007-01-06 Harri Pitkänen <hatapitk@iki.fi>

	* Add a few more replacement suggestions, thanks to
	  Teemu Likonen.

2007-01-01 Harri Pitkänen <hatapitk@iki.fi>

	* Accept optional hyphens as in "syys-ilta" and "syy-silta".
	* Accept optional hyphens as in "pop-opisto".

2006-12-31 Harri Pitkänen <hatapitk@iki.fi>

	* Clean up suggestion code.
	* Add new option VOIKKO_OPT_OCR_SUGGESTIONS for OCR optimised spelling
	  suggestions.
	* Increase version numbers.

2006-12-30 Harri Pitkänen <hatapitk@iki.fi>

	* Do not suggest splitting word immediately before or after a
	  hyphen. Move word splitting suggestions to lower priority.
	* Check the cost parameter within individual suggestion functions,
	  not just between the functions.

2006-12-09 Harri Pitkänen <hatapitk@iki.fi>

        * Fix character case check for words with punctuation.

2006-12-07 Harri Pitkänen <hatapitk@iki.fi>

	* Disable voikkohyphenate on Windows by making it print out an error
	  about unsupported operating system. This is because it is questionable
	  whether linking against msvcp60.dll is allowed by the GPL and no other
	  library that I know of provides mbrlen on Windows.

2006-12-05 Harri Pitkänen <hatapitk@iki.fi>

	* Make libiconv optional on Windows. If it is not available,
	  only conversion to/from UTF-8 and CP850 is possible.

2006-12-01 Harri Pitkänen <hatapitk@iki.fi>

	* Support all modes of dictionary selection in Windows.

2006-11-30 Harri Pitkänen <hatapitk@iki.fi>
